# generic-plonk-adapter

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
noir_test/: Nargo.toml
noir_test/proofs/: noir_test.proof
noir_test/src/: main.nr
